# AI_assistant

./: pyproject.toml
aihero/course/: download_repo.ipynb
aihero/project/: download_repo.ipynb
aihero/project/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
