[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "minsearch>=0.0.10",
    "openai>=2.30.0",
    "pydantic-ai>=1.78.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
